api loading packages added

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ff40275a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Hello')"
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "_ = load_dotenv()"
    ]
   },
   {
