--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,58 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "from langchain_core.messages import AnyMessage, AIMessage, HumanMessage\n",
+    "\n",
+    "from typing_extensions import TypedDict, Annotated\n",
+    "import operator\n",
+    "\n",
     "_ = load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "502b1103",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello! I'm doing well, thank you for asking! 😊 I'm here and ready to help you with whatever you need. How are you doing today?\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_llm = ChatOpenAI(\n",
+    "    base_url='https://api.deepseek.com',\n",
+    "    model='deepseek-reasoner',\n",
+    "    api_key=os.getenv('DEEPSEEK_API')\n",
+    ")\n",
+    "\n",
+    "chat_llm.invoke('Hello, how are you ?').content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1289ae16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GraphState(TypedDict):\n",
+    "    messages: Annotated[list[AnyMessage], operator.add]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7ea1051",
    "metadata": {},
    "outputs": [],
    "source": []
