llm_call func added

--- a/test.ipynb
+++ b/test.ipynb
@@ -60,8 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f7ea1051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm_call(state: GraphState) -> dict:\n",
+    "    response = chat_llm.invoke(state['messages'])\n",
+    "    return {'message': [response]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85d1737e",
    "metadata": {},
    "outputs": [],
    "source": []
