token_counter func added

--- a/test.ipynb
+++ b/test.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f7ea1051",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,14 @@
    "id": "85d1737e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def token_counter(state: GraphState) -> dict:\n",
+    "    last_msg = state['messages'][-1]\n",
+    "    text = last_msg.content\n",
+    "    token_number = len(text.split())\n",
+    "    summary = f'Total token number in the generated answer (word count) is {token_number}'\n",
+    "    return {'messages': [AIMessage(content=summary)]}"
+   ]
   }
  ],
  "metadata": {
