nodes and edges added

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,8 @@
     "\n",
     "from typing_extensions import TypedDict, Annotated\n",
     "import operator\n",
+    "\n",
+    "from langgraph.graph import StateGraph\n",
     "\n",
     "_ = load_dotenv()"
    ]
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "85d1737e",
    "metadata": {},
    "outputs": [],
@@ -84,6 +86,69 @@
     "    summary = f'Total token number in the generated answer (word count) is {token_number}'\n",
     "    return {'messages': [AIMessage(content=summary)]}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "138c92a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "builder = StateGraph(GraphState)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77207d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langgraph.graph.state.StateGraph at 0x1706f394ef0>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "builder.add_node('llm_call', llm_call)\n",
+    "builder.add_node('token_counter', token_counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ae842237",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langgraph.graph.state.StateGraph at 0x1706f394ef0>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "builder.set_entry_point('llm_call')\n",
+    "builder.add_edge('llm_call', 'token_counter')\n",
+    "builder.set_finish_point('token_counter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb986186",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
