llm_call corrected

--- a/test.ipynb
+++ b/test.ipynb
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "f7ea1051",
    "metadata": {},
    "outputs": [],
    "source": [
     "def llm_call(state: GraphState) -> dict:\n",
     "    response = chat_llm.invoke(state['messages'])\n",
-    "    return {'message': [response]}"
+    "    return {'messages': [response]}"
    ]
   },
   {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "138c92a6",
    "metadata": {},
    "outputs": [],
@@ -101,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "77207d68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1706f394ef0>"
+       "<langgraph.graph.state.StateGraph at 0x1706be3bb00>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "ae842237",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1706f394ef0>"
+       "<langgraph.graph.state.StateGraph at 0x1706be3bb00>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "fb986186",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "3cfb6782",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "Graph(nodes={'__start__': Node(id='__start__', name='__start__', data=RunnableCallable(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), 'llm_call': Node(id='llm_call', name='llm_call', data=llm_call(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), 'token_counter': Node(id='token_counter', name='token_counter', data=token_counter(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), '__end__': Node(id='__end__', name='__end__', data=None, metadata=None)}, edges=[Edge(source='__start__', target='llm_call', data=None, conditional=False), Edge(source='llm_call', target='token_counter', data=None, conditional=False), Edge(source='token_counter', target='__end__', data=None, conditional=False)])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "id": "3313b21c",
    "metadata": {},
    "outputs": [
@@ -198,8 +198,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6798bfe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = app.invoke(\n",
+    "    {\n",
+    "        'messages': [HumanMessage(content='Hi, this is Bob. Say hello in detail.')]\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c9aea2ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': [HumanMessage(content='Hi, this is Bob. Say hello in detail.', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content=\"Hello Bob! It's a genuine pleasure to meet you in this digital space. I hope this message finds you having a truly wonderful day, wherever you are. A very warm and detailed welcome to you—thank you for introducing yourself and reaching out. It's great to connect.\\n\\nI'm here, ready and eager to assist with any questions, ideas, or conversations you might have. Whether you're looking for information, a thoughtful discussion, or just a friendly chat, consider me your dedicated partner in it all.\\n\\nSo, once again, a most hearty hello! How is everything going for you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 254, 'prompt_tokens': 15, 'total_tokens': 269, 'completion_tokens_details': {'accepted_prediction_tokens': None, 'audio_tokens': None, 'reasoning_tokens': 132, 'rejected_prediction_tokens': None}, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 0}, 'prompt_cache_hit_tokens': 0, 'prompt_cache_miss_tokens': 15}, 'model_provider': 'openai', 'model_name': 'deepseek-reasoner', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': 'fb123ff3-e26d-43e3-ae57-66c44e98af24', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--019c679a-06da-7423-a28d-314becaaf3b8-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 15, 'output_tokens': 254, 'total_tokens': 269, 'input_token_details': {'cache_read': 0}, 'output_token_details': {'reasoning': 132}}),\n",
+       "  AIMessage(content='Total token number in the generated answer (word count) is 97', additional_kwargs={}, response_metadata={}, tool_calls=[], invalid_tool_calls=[])]}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27f0c622",
    "metadata": {},
    "outputs": [],
    "source": []
