graph output pretified

--- a/test.ipynb
+++ b/test.ipynb
@@ -235,8 +235,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "27f0c622",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HumanMessage: Hi, this is Bob. Say hello in detail.\n",
+      "AIMessage: Hello Bob! It's a genuine pleasure to meet you in this digital space. I hope this message finds you having a truly wonderful day, wherever you are. A very warm and detailed welcome to you—thank you for introducing yourself and reaching out. It's great to connect.\n",
+      "\n",
+      "I'm here, ready and eager to assist with any questions, ideas, or conversations you might have. Whether you're looking for information, a thoughtful discussion, or just a friendly chat, consider me your dedicated partner in it all.\n",
+      "\n",
+      "So, once again, a most hearty hello! How is everything going for you today?\n",
+      "AIMessage: Total token number in the generated answer (word count) is 97\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in result['messages']:\n",
+    "    print(f\"{type(m).__name__}: {m.content}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2069827b",
    "metadata": {},
    "outputs": [],
    "source": []
