wiki tool added

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -21,22 +21,25 @@
     "\n",
     "from IPython.display import Image, display\n",
     "\n",
+    "from langchain_community.tools import WikipediaQueryRun\n",
+    "from langchain_community.utilities import WikipediaAPIWrapper\n",
+    "\n",
     "_ = load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "502b1103",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hello! I'm doing well, thank you for asking! 😊 I'm here and ready to help you with whatever you need. How are you doing today?\""
+       "\"Hello! I'm just a computer program, so I don't have feelings, but I'm functioning perfectly and ready to help you. 😊\\n\\nHow are *you* doing today? Is there anything I can assist you with?\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "1289ae16",
    "metadata": {},
    "outputs": [],
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "f7ea1051",
    "metadata": {},
    "outputs": [],
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "85d1737e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "138c92a6",
    "metadata": {},
    "outputs": [],
@@ -101,17 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "77207d68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1706be3bb00>"
+       "<langgraph.graph.state.StateGraph at 0x1c131499df0>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "ae842237",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1706be3bb00>"
+       "<langgraph.graph.state.StateGraph at 0x1c131499df0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "fb986186",
    "metadata": {},
    "outputs": [],
@@ -156,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "3cfb6782",
    "metadata": {},
    "outputs": [
@@ -166,7 +169,7 @@
        "Graph(nodes={'__start__': Node(id='__start__', name='__start__', data=RunnableCallable(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), 'llm_call': Node(id='llm_call', name='llm_call', data=llm_call(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), 'token_counter': Node(id='token_counter', name='token_counter', data=token_counter(tags=None, recurse=True, explode_args=False, func_accepts={}), metadata=None), '__end__': Node(id='__end__', name='__end__', data=None, metadata=None)}, edges=[Edge(source='__start__', target='llm_call', data=None, conditional=False), Edge(source='llm_call', target='token_counter', data=None, conditional=False), Edge(source='token_counter', target='__end__', data=None, conditional=False)])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "3313b21c",
    "metadata": {},
    "outputs": [
@@ -198,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6798bfe8",
    "metadata": {},
    "outputs": [],
@@ -212,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c9aea2ff",
    "metadata": {},
    "outputs": [
@@ -220,11 +223,11 @@
      "data": {
       "text/plain": [
        "{'messages': [HumanMessage(content='Hi, this is Bob. Say hello in detail.', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content=\"Hello Bob! It's a genuine pleasure to meet you in this digital space. I hope this message finds you having a truly wonderful day, wherever you are. A very warm and detailed welcome to you—thank you for introducing yourself and reaching out. It's great to connect.\\n\\nI'm here, ready and eager to assist with any questions, ideas, or conversations you might have. Whether you're looking for information, a thoughtful discussion, or just a friendly chat, consider me your dedicated partner in it all.\\n\\nSo, once again, a most hearty hello! How is everything going for you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 254, 'prompt_tokens': 15, 'total_tokens': 269, 'completion_tokens_details': {'accepted_prediction_tokens': None, 'audio_tokens': None, 'reasoning_tokens': 132, 'rejected_prediction_tokens': None}, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 0}, 'prompt_cache_hit_tokens': 0, 'prompt_cache_miss_tokens': 15}, 'model_provider': 'openai', 'model_name': 'deepseek-reasoner', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': 'fb123ff3-e26d-43e3-ae57-66c44e98af24', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--019c679a-06da-7423-a28d-314becaaf3b8-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 15, 'output_tokens': 254, 'total_tokens': 269, 'input_token_details': {'cache_read': 0}, 'output_token_details': {'reasoning': 132}}),\n",
-       "  AIMessage(content='Total token number in the generated answer (word count) is 97', additional_kwargs={}, response_metadata={}, tool_calls=[], invalid_tool_calls=[])]}"
+       "  AIMessage(content=\"Hello, Bob! It's a genuine pleasure to meet you. I hope this message finds you having a truly wonderful day, wherever you are and whatever you're doing.\\n\\nA detailed hello means more than just the word—it's an acknowledgment, a small moment of connection. So, welcome. I'm here, ready to listen, chat, help with questions, brainstorm ideas, or just offer a bit of digital companionship. Whether you're here for something specific or just passing the time, I'm glad our paths crossed.\\n\\nWhat's on your mind today, Bob? I'm all ears.\\n\\nWarmly,\\nYour AI Assistant\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 247, 'prompt_tokens': 15, 'total_tokens': 262, 'completion_tokens_details': {'accepted_prediction_tokens': None, 'audio_tokens': None, 'reasoning_tokens': 120, 'rejected_prediction_tokens': None}, 'prompt_tokens_details': {'audio_tokens': None, 'cached_tokens': 0}, 'prompt_cache_hit_tokens': 0, 'prompt_cache_miss_tokens': 15}, 'model_provider': 'openai', 'model_name': 'deepseek-reasoner', 'system_fingerprint': 'fp_eaab8d114b_prod0820_fp8_kvcache', 'id': 'cd2eda9a-6d27-44f8-aa66-5f89884d0e7c', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--019c6a96-c7f1-75b0-aaa6-9daf217546a1-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 15, 'output_tokens': 247, 'total_tokens': 262, 'input_token_details': {'cache_read': 0}, 'output_token_details': {'reasoning': 120}}),\n",
+       "  AIMessage(content='Total token number in the generated answer (word count) is 93', additional_kwargs={}, response_metadata={}, tool_calls=[], invalid_tool_calls=[])]}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "27f0c622",
    "metadata": {},
    "outputs": [
@@ -244,12 +247,15 @@
      "output_type": "stream",
      "text": [
       "HumanMessage: Hi, this is Bob. Say hello in detail.\n",
-      "AIMessage: Hello Bob! It's a genuine pleasure to meet you in this digital space. I hope this message finds you having a truly wonderful day, wherever you are. A very warm and detailed welcome to you—thank you for introducing yourself and reaching out. It's great to connect.\n",
+      "AIMessage: Hello, Bob! It's a genuine pleasure to meet you. I hope this message finds you having a truly wonderful day, wherever you are and whatever you're doing.\n",
       "\n",
-      "I'm here, ready and eager to assist with any questions, ideas, or conversations you might have. Whether you're looking for information, a thoughtful discussion, or just a friendly chat, consider me your dedicated partner in it all.\n",
+      "A detailed hello means more than just the word—it's an acknowledgment, a small moment of connection. So, welcome. I'm here, ready to listen, chat, help with questions, brainstorm ideas, or just offer a bit of digital companionship. Whether you're here for something specific or just passing the time, I'm glad our paths crossed.\n",
       "\n",
-      "So, once again, a most hearty hello! How is everything going for you today?\n",
-      "AIMessage: Total token number in the generated answer (word count) is 97\n"
+      "What's on your mind today, Bob? I'm all ears.\n",
+      "\n",
+      "Warmly,\n",
+      "Your AI Assistant\n",
+      "AIMessage: Total token number in the generated answer (word count) is 93\n"
      ]
     }
    ],
@@ -260,8 +266,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2069827b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_wrapper = WikipediaAPIWrapper(top_k_results=5, doc_content_chars_max=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "82dbb6a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wiki_tool = WikipediaQueryRun(api_wrapper=api_wrapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "83b411a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Page: Quantitative analysis (finance)\\nSummary: Quantitative analysis in finance refers to the application of mathematical and statistical methods to problems in financial markets and investment management. Professionals in this field are known as quantitative analysts or quants.  \\nQuants typically specialize in areas such as derivative structuring and pricing, risk management, portfolio management, and other finance-related activities. The role is analogous to that of specialists in industrial m'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiki_tool.run({'query': 'Quantitative finance'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45ce717f",
    "metadata": {},
    "outputs": [],
    "source": []
