--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "\n",
     "from langchain_community.tools import WikipediaQueryRun\n",
     "from langchain_community.utilities import WikipediaAPIWrapper\n",
+    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "\n",
     "_ = load_dotenv()"
    ]
@@ -307,8 +308,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "45ce717f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tool = TavilySearchResults(tavily_api_key=os.getenv('TAVILY_API'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2aebc447",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': '2026 World Cup Schedule – USA, Canada and Mexico - Roadtrips',\n",
+       "  'url': 'https://www.roadtrips.com/world-cup/2026-world-cup-packages/schedule/',\n",
+       "  'content': '## When is the Next World Cup?\\n\\nThe next World Cup will take place from Thursday, June 11 to Sunday, July 19, 2026. The tournament will be hosted across the United States, Canada, and Mexico, featuring 48 teams and 104 matches over 39 days. Below are some key details about the 2026 World Cup schedule.\\n\\n + The 2026 World Cup will be the first to take place with 48 teams, expanded from 32 in 2022.\\n  + For the group stage, teams will be divided into twelve groups of four teams.\\n  + The top two teams from each group plus the eight best third place teams will proceed to the (new) Round of 32.\\n  + All matches after the group stage will be knockout format.\\n  + A total of 104 matches will be played, up from 64 at the 2022 edition. [...] 1-800-465-1765  Get Custom Quote\\n\\n# 2026 World Cup Schedule\\n\\nWorld Cup Menu\\n\\n World Cup\\n Packages\\n  + Custom Getaways\\n  + Follow Your Team\\n  + Semifinals & Finals\\n Hotels\\n Venues\\n Schedule\\n Ultimate Guide\\n Rates\\n\\n Download Brochure\\n\\n## 2026 World Cup Schedule – USA, Canada and Mexico\\n\\nThe 2026 World Cup schedule is a soccer lover’s dream, with a total of 104 matches over the course of the tournament. Whatever your ideal World Cup experience looks like, we’d love to help design the perfect itinerary for you. We’ve detailed the complete 2026 World Cup schedule below to assist you with your planning for this thrilling tournament.\\n\\n## When is the Next World Cup? [...] The games will take place in 16 venues throughout Canada, Mexico, and the USA.\\n The 2026 World Cup Final will take place on July 19, 2026.\\n National teams around the world will play qualifying matches until March 2026.\\n\\n## What are the 2026 World Cup Groups:',\n",
+       "  'score': 0.89324445},\n",
+       " {'title': '2026 FIFA World Cup - Wikipedia',\n",
+       "  'url': 'https://en.wikipedia.org/wiki/2026_FIFA_World_Cup',\n",
+       "  'content': 'The 2026 FIFA World Cup, marketed as FIFA World Cup 26,( will be the 23rd FIFA World Cup, the quadrennial international men\\'s soccer championship contested by the national teams of the member associations of FIFA. The tournament will take place from June 11 to July 19, 2026.( It will be jointly hosted by sixteen cities—eleven in the United States, three in Mexico, and two in Canada. The tournament will be the first to be hosted by three nations. [...] First match(es) will be played: June 11, 2026. Source: FIFA\\n\\nRules for classification: 1) Points; 2) Goal difference; 3) Goals scored; 4) Team conduct score; 5) Latest FIFA ranking; 6) Previous FIFA ranking(s).\\n\\nThe specific match-ups involving the third-placed teams depend on which eight third-placed teams qualify for the round of 32. The 495 possible combinations were published in Annex C of the tournament regulations.( [...] The draw took place on December 5, 2025, at the Kennedy Center in Washington, D.C.( The 48 teams were divided into four pots of 12. Pot 1 consisted of the three hosts and the top nine teams from the November 2025 FIFA Men\\'s World Ranking. Pots 2, 3, and 4 consisted of the remaining teams according to the ranking. The four winners of the UEFA playoffs and the two winners of the inter-confederation playoffs \"2026 FIFA World Cup qualification (inter-confederation play-offs)\") were not known at the time of the draw, as these matches are scheduled to take place in March 2026, and thus were automatically allocated to Pot 4. The 12 groups were randomly formed by selecting one team from each of the four pots. FIFA\\'s \"general principle, whenever possible\", was that no group had more than one team',\n",
+       "  'score': 0.85825616},\n",
+       " {'title': '2026 FIFA World Cup Schedule - ESPN',\n",
+       "  'url': 'https://www.espn.com/soccer/schedule/_/league/fifa.world',\n",
+       "  'content': \"Saturday, June 13, 2026\\n\\n| MATCH | TIME | TV | location | tickets | Odds by |\\n ---  ---  --- |\\n| Qatar | vSwitzerland | 3:00 PM | FOX | Levi's Stadium, Santa Clara, California | Line: SUI -320 O/U: 2.5 |\\n| Brazil | vMorocco | 6:00 PM | FS1 | MetLife Stadium, East Rutherford, New Jersey | Line: BRA -170 O/U: 2.5 |\\n| Haiti | vScotland | 9:00 PM | FS1 | Gillette Stadium, Foxborough, Massachusetts | Line: SCO -275 O/U: 2.5 |\\n\\nSunday, June 14, 2026 [...] # FIFA World Cup Schedule\\n\\nThursday, June 11, 2026\\n\\n| MATCH | TIME | TV | location | tickets | Odds by |\\n ---  ---  --- |\\n| Mexico | vSouth Africa | 3:00 PM | FOX | Estadio Banorte, Mexico City, Mexico | Line: MEX -185 O/U: 2.5 |\\n| South Korea | vWinner Playoff Path D | 10:00 PM | FS1 | Estadio Akron, Guadalajara, Mexico |\\n\\nFriday, June 12, 2026\\n\\n| MATCH | TIME | TV | location | tickets | Odds by |\\n ---  ---  --- |\\n| Canada | vWinner Playoff Path A | 3:00 PM | FOX | BMO Field, Toronto, Canada |\\n| United States | vParaguay | 9:00 PM | FOX  Peacock | SoFi Stadium, Inglewood, California | Line: USA +105 O/U: 2.5 |\\n\\nSaturday, June 13, 2026 [...] Monday, June 15, 2026\\n\\n| MATCH | TIME | TV | location | tickets | Odds by |\\n ---  ---  --- |\\n| Spain | vCape Verde | 12:00 PM | FOX | Mercedes-Benz Stadium, Atlanta, Georgia | Line: ESP -1600 O/U: 3.5 |\\n| Belgium | vEgypt | 3:00 PM | FOX | Lumen Field, Seattle, Washington | Line: BEL -180 O/U: 2.5 |\\n| Saudi Arabia | vUruguay | 6:00 PM | FS1 | Hard Rock Stadium, Miami Gardens, Florida | Line: URU -175 O/U: 2.5 |\\n| IR Iran | vNew Zealand | 9:00 PM | FS1 | SoFi Stadium, Inglewood, California | Line: IRN -150 O/U: 2.5 |\\n\\nTuesday, June 16, 2026\",\n",
+       "  'score': 0.6161283},\n",
+       " {'title': 'FIFA World Cup 2026™ - United States Department of State',\n",
+       "  'url': 'https://www.state.gov/fifa-world-cup-26',\n",
+       "  'content': 'Image 14\\n\\nSeattle Stadium – Seattle, Washington, USA\\n\\nQuick Facts\\n\\nDates\\n\\nJune 11–\\n\\nJuly 19, 2026\\n\\nCo-Hosts\\n\\nUnited States, Canada, Mexico\\n\\nParticipating Teams\\n\\n48 National Teams\\n\\nU.S. Opening Match\\n\\nLos Angeles Stadium, \\n\\nInglewood, CA\\n\\nFinal\\n\\nJuly 19, 2026\\n\\nNew York New Jersey Stadium, NJ\\n\\nRelated Releases\\n\\nVideo | White House\\n\\nFIFA World Cup Drawing Announced to Take Place at The Kennedy Center\\n\\nWhite House\\n\\nWhite House Task Force on the FIFA World Cup 2026\\n\\nPresidential Action | White House\\n\\nEstablishing the White House Task Force on the FIFA World Cup 2026\\n\\nBack to Top\\n\\n   White House\\n   USA.gov\\n   Office of the Inspector General\\n   Archives\\n   Contact Us\\n   Freedom 250\\n\\nfollow us\\n\\nFacebookXInstagramYouTubeFlickrGovDelivery',\n",
+       "  'score': 0.60750073},\n",
+       " {'title': 'FIFA World Cup 2026 schedule: Every game by city & stadium',\n",
+       "  'url': 'https://www.mlssoccer.com/news/fifa-world-cup-2026-schedule-every-game-by-city-stadium',\n",
+       "  'content': \"Vancouver - BC Place\\n\\nCanada\\n\\n### Group Stage\\n\\n June 13: Australia vs. UEFA Playoff C Winner | Group D\\n June 18: Canada vs. Qatar | Group B\\n June 21: New Zealand vs. Egypt | Group G\\n June 24: Switzerland vs. Canada | Group B\\n June 26: New Zealand vs. Belgium | Group G\\n\\n### Knockout Stage\\n\\n July 2: Group B Winner vs. Group E/F/G/I/J third place (Round of 32)\\n July 7: Winner Match 85 vs. Winner Match 87 (Round of 16)\\n\\nMLSsoccer staff -\\n\\n @mls\\n\\n World Cup\\n Essentials\\n\\n Share on Facebook\\n Share on X\\n\\n## Related Stories\\n\\n Minnesota United FC: Your guide to James Rodríguez's new team\\n FIFA World Cup 2026 format explained\\n FIFA 2026 World Cup: How every team qualified\\n\\nMore News\\n\\nMore News\\n\\n Transfer Tracker\\n\\n  ## FC Dallas acquire Uruguayan midfielder Joaquín Valiente\\n Transfer Tracker [...] # FIFA World Cup 2026 schedule: Every game by city & stadium\\n\\nMLSsoccer staff\\n\\n Share on Facebook\\n Share on X\\n\\nThe 2026 FIFA World Cup will feature 48 teams and 104 matches to be played in 16 cities across the United States, Canada and Mexico.\\n\\nReady to check off a bucket list item? Here's where – and when – the games will be played.\\n\\n World Cup draw: Full results & every group\\n\\nAtlanta, Georgia - Mercedes-Benz Stadium\\n\\nUnited States\\n\\n### Group Stage\\n\\n June 15: Spain vs. Cape Verde | Group H\\n June 18: UEFA Playoff D Winner vs. South Africa | Group A\\n June 21: Spain vs. Saudi Arabia | Group H\\n June 24: Morocco vs. Haiti | Group C\\n June 27: Intercontinental Playoff 1 Winner vs. Uzbekistan | Group K\\n\\n### Knockout Stage [...] Monterrey - Estadio BBVA\\n\\nMexico\\n\\n### Group Stage\\n\\n June 14: UEFA Playoff B Winner vs. Tunisia | Group F\\n June 20: Tunisia vs. Japan | Group F\\n June 24: South Africa vs. South Korea | Group A\\n\\n### Knockout Stage\\n\\n June 29: Group F Winner vs. Group C runner-up (Round of 32)\\n\\nNew York/New Jersey - MetLife Stadium\\n\\nUnited States\\n\\n### Group Stage\\n\\n June 13: Brazil vs. Morocco | Group C\\n June 16: France vs. Senegal | Group I\\n June 22: Norway vs. Senegal | Group I\\n June 25: Ecuador vs. Germany | Group E\\n June 27: Panama vs. England | Group L\\n\\n### Knockout Stage\\n\\n June 30: Group I Winner vs. Group C/D/F/G/H third place (Round of 32)\\n July 5: Winner Match 76 vs. Winner Match 78 (Round of 32)\\n July 19: Winner Match 101 vs. Winner Match 102 (Final)\\n\\nPhiladelphia - Lincoln Financial Field\",\n",
+       "  'score': 0.599087}]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool.invoke({'query': 'When is the next soccer world cup?'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b71d97b5",
    "metadata": {},
    "outputs": [],
    "source": []
