--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "\n",
     "from IPython.display import Image, display\n",
     "\n",
-    "from langchain_community.tools import WikipediaQueryRun\n",
+    "from langchain_community.tools import WikipediaQueryRun, DuckDuckGoSearchRun\n",
     "from langchain_community.utilities import WikipediaAPIWrapper\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "\n",
@@ -358,8 +358,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b71d97b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Impersonate 'safari_17.5' does not exist, using 'random'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"1 day ago - The 2026 FIFA World Cup, marketed as FIFA World Cup 26, will be the 23rd FIFA World Cup, the quadrennial international men's soccer championship contested by the national teams of the member associations of FIFA. The tournament will take place from June 11 to July 19, 2026 . 6 days ago - United 2026 , also known as the North American 2026 bid, was a successful joint bid led by the United States Soccer Federation, together with the Canadian Soccer Association and the Mexican Football Federation, to host the 2026 FIFA World Cup ... 3 weeks ago - We’ve detailed the complete 2026 World Cup schedule below to assist you with your planning for this thrilling tournament. The next World Cup will take place from Thursday, June 11 to Sunday, July 19, 2026 . 19 hours ago - The full schedule with dates, times and stadiums have been confirmed for all 104 games at the 2026 World Cup. 3 days ago - The news is really starting to ramp up ahead of the summer and you can follow it all right here. Stay across all things 2026 World Cup on The Athletic. ... With less than four months to go before Canada kicks off its 2026 World Cup campaign ...\""
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search = DuckDuckGoSearchRun()\n",
+    "\n",
+    "search.invoke({'query': 'When is the next soccer world cup?'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a61a7e56",
    "metadata": {},
    "outputs": [],
    "source": []
