youtube search added

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "\n",
     "from IPython.display import Image, display\n",
     "\n",
-    "from langchain_community.tools import WikipediaQueryRun, DuckDuckGoSearchRun\n",
+    "from langchain_community.tools import WikipediaQueryRun, DuckDuckGoSearchRun, YouTubeSearchTool\n",
     "from langchain_community.utilities import WikipediaAPIWrapper\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "\n",
@@ -388,8 +388,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a61a7e56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tool = YouTubeSearchTool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "54aae7e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'youtube_search'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "94a34cf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'search for youtube videos associated with a person. the input to this tool should be a comma separated list, the first part contains a person name and the second a number that is the maximum number of video results to return aka num_results. the second part is optional'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1db1031b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['https://www.youtube.com/watch?v=1GSKa5_xKVQ&pp=ygUMYWxnbyB0cmFkaW5n', 'https://www.youtube.com/watch?v=9Y3yaoi9rUQ&pp=ygUMYWxnbyB0cmFkaW5n']\""
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool.run('algo trading')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abca45c6",
    "metadata": {},
    "outputs": [],
    "source": []
