--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "ff40275a",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,8 @@
     "from langchain_community.tools import WikipediaQueryRun, DuckDuckGoSearchRun, YouTubeSearchTool\n",
     "from langchain_community.utilities import WikipediaAPIWrapper\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
+    "\n",
+    "from langchain.tools import tool\n",
     "\n",
     "_ = load_dotenv()"
    ]
@@ -463,6 +465,141 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "abca45c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiply(a:int, b:int) -> int:\n",
+    "    return a * b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1d4b3bd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply(3, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8753d49d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def multiply(a:int, b:int) -> int:\n",
+    "    '''Multiplies two integers and returns the result\n",
+    "    \n",
+    "        Args:\n",
+    "        a: int, a number\n",
+    "        b: int, a number\n",
+    "    '''\n",
+    "    return a * b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "f3398a51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply.invoke({'a': 2, 'b': 4})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "8d4cf951",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'multiply'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e3c6536f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Multiplies two integers and returns the result\\n\\n        Args:\\n        a: int, a number\\n        b: int, a number'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "52462425",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': {'title': 'A', 'type': 'integer'},\n",
+       " 'b': {'title': 'B', 'type': 'integer'}}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply.args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d619b48b",
    "metadata": {},
    "outputs": [],
    "source": []
